add profile, png->JPG

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Siyi Zhao"
-  avatar           : "profile.png"
+  avatar           : "profile.JPG"
   bio              : "2nd year graduate student at DoA, Tsinghua University"
   location         : "Haidian, Beijing"
   employer         :
